Changing the docker-compose config to run the app with docker-compose up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       - ./ganache_data:/ganache_data
       - ./abi:/home/app-ui/src/contracts
       - ./client/node_modules:/home/app-ui/node_modules
+    depends_on:
+      - ganache
+      - truffle
   ganache:
     image: "trufflesuite/ganache-cli:latest"
     restart: unless-stopped
